# ifpu-data-challenge

./: Cargo.toml
Challenge0/python/: challenge0.py  richie_code.py
challenge1/: challenge1.npz  challenge1.py  challenge1_1000.npz  challenge1_500.npz  richie_code.py
src/: cdf.rs  interp.rs  knns.rs  lib.rs  load_data.rs  main.rs  output.rs
