[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.3.4"
env_logger = "0.9.0"
interp1d = "0.1.1"
itertools = "0.10.3"
log = "0.4.17"
nabo = { path = "../nabo-rs" }
ndarray = "0.15.4"
ndarray-npy = "0.8.1" 
rand = "0.8.5"
rayon = "1.5.3"


[profile.release]
lto = "fat"
codegen-units = 1
