[package]
name = "ifpu-knns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorous = "1.0.6"
dashmap = "5.3.4"
download_rs = { version = "0.2.0", features = ["sync_download"], default-features = false }
env_logger = "0.9.0"
interp1d = "0.1.1"
itertools = "0.10.3"
log = "0.4.17"
nabo-pbc = "0.2.1"
ndarray = "0.15.4"
ndarray-npy = "0.8.1" 
plotters = "0.3.2"
rand = "0.8.5"
rayon = "1.5.3"
zip-extract = "0.1.1"


[profile.release]
lto = "fat"
codegen-units = 1
